--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </li>
           </ul>
           <div>
-            <a href="#" class="mr-3"><div class="d-none d-xl-inline">Sign IN</div></a>
+            <a href="https://ar-study-front-end.herokuapp.com/" class="mr-3"><div class="d-none d-xl-inline">Sign IN</div></a>
           </div>
         </div>
       </nav>
